--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.0",
+    "express-http-proxy": "^1.6.0",
     "lodash": "^4.17.5",
     "twilio": "^3.17.1",
     "web-push": "^3.2.2"
